# test

./: .gitignore  CMakeLists.txt  plc_axis_scale.cfg  plc_axis_zero.cfg  slaveinfo_basic.txt
samples/simple_ng/: CMakeLists.txt  plc_emulator.c  plc_protocol.c  plc_protocol.h  plc_state.h  plc_tcp_client.c  plc_tcp_client.h  servo_cli.c  simple_ng.c
